# applaunchd

./: README.md  meson.build
data/: meson.build  org.automotivelinux.AppLaunch.service.in  org.automotivelinux.AppLaunch.xml  org.freedesktop.Application.xml
src/: AppLauncherImpl.cc  AppLauncherImpl.h  app_info.c  app_info.h  app_launcher.c  app_launcher.h  main-grpc.cc  main.c  meson.build  systemd_manager.c  systemd_manager.h  utils.c  utils.h
src/gdbus/: README.md  org_freedesktop_systemd1_manager.xml  org_freedesktop_systemd1_unit.xml  systemd1_manager_interface.c  systemd1_manager_interface.h  systemd1_unit_interface.c  systemd1_unit_interface.h
